plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
    id 'com.google.secrets_gradle_plugin' version '0.6'
}

android {
    namespace 'com.kernelcrew.moodapp'
    compileSdk = 35

    defaultConfig {
        applicationId "com.kernelcrew.moodapp"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // Add VM argument for ByteBuddy experimental support for Java 21
        testOptions {
            unitTests.all {
                jvmArgs '-Dnet.bytebuddy.experimental=true'
            }
            unitTests.includeAndroidResources = true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    testOptions {
        unitTests {
            includeAndroidResources = false
        }
    }

    packagingOptions {
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/LICENSE-notice.md'
    }
}

dependencies {
    implementation libs.play.services.location
    implementation libs.play.services.maps
    testImplementation libs.ext.junit
    annotationProcessor libs.glide.compiler

    implementation libs.activity
    implementation libs.androidx.fragment.testing
    implementation libs.annotation
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.coordinatorlayout
    implementation libs.core.ktx
    implementation libs.firebase.auth
    implementation libs.firebase.firestore
    implementation libs.github.glide
    implementation libs.material
    implementation libs.navigation.common
    implementation libs.navigation.fragment
    implementation(platform(libs.firebase.bom))

    // Unit test dependencies - keep these minimal, avoid Android dependencies
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation 'org.mockito:mockito-inline:4.11.0'

    // Required for AndroidJUnit4 in unit tests
    testImplementation 'androidx.test:core:1.5.0'
    testImplementation 'androidx.test:runner:1.5.2'
    testImplementation 'androidx.test.ext:junit:1.1.5'
    testImplementation 'org.robolectric:robolectric:4.14.1'

    // Instrumentation test dependencies - these need to match and work together
    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1', {
        exclude group: 'org.checkerframework', module: 'checker'
        exclude module: "protobuf-lite"
    }

    // Existing dependencies
    androidTestImplementation libs.androidx.espresso.intents
    androidTestImplementation libs.androidx.uiautomator
    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.rules
    androidTestImplementation libs.mockito.android
    androidTestImplementation(libs.androidx.runner)
    androidTestImplementation(libs.espresso.core)
    androidTestImplementation(libs.ext.junit)

    // Fix issue where protobuf class static method cannot be found.
    // See: https://stackoverflow.com/a/68675881/10970228
    androidTestImplementation(libs.espresso.contrib){
        exclude module: "protobuf-lite"
    }

    // https://github.com/awaitility/awaitility/issues/194
    androidTestImplementation(libs.awaitility.v410) {
        transitive = false
    }
}

apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

// Generate tasks to generate javadocs for all build variant
// Source: https://stackoverflow.com/a/29164335/10970228
android.applicationVariants.all { variant ->
    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
        description "Generates Javadoc for $variant.name."
        source = variant.javaCompile.source
        ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
        options.links("http://docs.oracle.com/javase/7/docs/api/");
        options.links("http://d.android.com/reference/");
    }
}
